mobile overlap fix

--- a/css/styles.css
+++ b/css/styles.css
@@ -1,22 +1,3 @@
 @import "index.navbar.css";
 @import "index.hero.css";
-
-*,
-*::after,
-*::before {
-  margin: 0;
-  padding: 0;
-  box-sizing: border-box;
-}
-
-::-webkit-scrollbar {
-    display: none;
-}
-
-body {
-  background-color: #ffffff;
-}
-
-html {
-  scroll-behavior: smooth;
-}
+@import "reboot.css";
